# WeKit-

./: .gitignore  .gitmodules  README.md  build.gradle.kts  frida-inject.js  gradle.properties  settings.gradle.kts
.github/workflows/: bot-contributing.yml  ci.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native_crash_handler.cpp
app/src/main/java/dev/ujhhgtg/wekit/activity/: MainActivity.kt  StubFragmentActivity.kt
app/src/main/java/dev/ujhhgtg/wekit/application/: ModuleApplication.kt
app/src/main/java/dev/ujhhgtg/wekit/constants/: PackageNames.kt  PreferenceKeys.kt
app/src/main/java/dev/ujhhgtg/wekit/preferences/: MmkvPrefsImpl.kt  WePrefs.kt
app/src/main/java/dev/ujhhgtg/wekit/utils/: AnyUtils.kt  AudioUtils.kt  ClipboardUtils.kt  HookUtils.kt  HostInfo.kt  KnownPaths.kt  ModuleRes.kt  SilkCodec.kt  TargetProcesses.kt  ThreadUtils.kt  ToastUtils.kt  UriUtils.kt  WeLogger.kt
app/src/main/java/moe/ouom/wekit/activity/: MainActivity.kt  ShadowSafTransientActivity.java
app/src/main/java/moe/ouom/wekit/config/: MmkvConfigManagerImpl.java  MmkvPrefsImpl.kt  RuntimeConfig.kt  WeConfig.java  WePrefs.kt
app/src/main/java/moe/ouom/wekit/constants/: Constants.kt  PackageConstants.kt  PackageNames.kt
app/src/main/res/drawable/: github_24px.xml  telegram_24px.xml
app/src/main/rust/wekit-native/: Cargo.toml  build.rs
app/src/main/rust/wekit-native/src/: crash_handler.rs  crash_triggerer.rs  lib.rs  logging.rs  silk_codec.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+391 files in other folders)
